esp-idf project/build/log/idf_py_stdout_output_1054032
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/abdellah/esp-idf/ep_smart_house/build/bootloader/esp-idf/esptool_py && /home/abdellah/.espressif/python_env/idf5.1_py3.11_env/bin/python /home/abdellah/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/abdellah/esp-idf/ep_smart_house/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/7] Building C object esp-idf/ep_wifi/CMakeFiles/__idf_ep_wifi.dir/ep_wifi.c.obj
FAILED: esp-idf/ep_wifi/CMakeFiles/__idf_ep_wifi.dir/ep_wifi.c.obj 
/home/abdellah/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-2668-g4c98bee8a4-dirty\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/abdellah/esp-idf/ep_smart_house/build/config -I/home/abdellah/esp-idf/components/ep_wifi -I/home/abdellah/esp-idf/components/newlib/platform_include -I/home/abdellah/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/abdellah/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/abdellah/esp-idf/components/freertos/esp_additions/include/freertos -I/home/abdellah/esp-idf/components/freertos/esp_additions/include -I/home/abdellah/esp-idf/components/esp_hw_support/include -I/home/abdellah/esp-idf/components/esp_hw_support/include/soc -I/home/abdellah/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/abdellah/esp-idf/components/esp_hw_support/port/esp32/. -I/home/abdellah/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/abdellah/esp-idf/components/heap/include -I/home/abdellah/esp-idf/components/log/include -I/home/abdellah/esp-idf/components/soc/include -I/home/abdellah/esp-idf/components/soc/esp32/. -I/home/abdellah/esp-idf/components/soc/esp32/include -I/home/abdellah/esp-idf/components/hal/esp32/include -I/home/abdellah/esp-idf/components/hal/include -I/home/abdellah/esp-idf/components/hal/platform_port/include -I/home/abdellah/esp-idf/components/esp_rom/include -I/home/abdellah/esp-idf/components/esp_rom/include/esp32 -I/home/abdellah/esp-idf/components/esp_rom/esp32 -I/home/abdellah/esp-idf/components/esp_common/include -I/home/abdellah/esp-idf/components/esp_system/include -I/home/abdellah/esp-idf/components/esp_system/port/soc -I/home/abdellah/esp-idf/components/esp_system/port/include/private -I/home/abdellah/esp-idf/components/xtensa/include -I/home/abdellah/esp-idf/components/xtensa/esp32/include -I/home/abdellah/esp-idf/components/lwip/include -I/home/abdellah/esp-idf/components/lwip/include/apps -I/home/abdellah/esp-idf/components/lwip/include/apps/sntp -I/home/abdellah/esp-idf/components/lwip/lwip/src/include -I/home/abdellah/esp-idf/components/lwip/port/esp32/include -I/home/abdellah/esp-idf/components/lwip/port/esp32/include/arch -I/home/abdellah/esp-idf/components/esp_wifi/include -I/home/abdellah/esp-idf/components/esp_event/include -I/home/abdellah/esp-idf/components/esp_phy/include -I/home/abdellah/esp-idf/components/esp_phy/esp32/include -I/home/abdellah/esp-idf/components/esp_netif/include -I/home/abdellah/esp-idf/components/nvs_flash/include -I/home/abdellah/esp-idf/components/spi_flash/include -I/home/abdellah/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/abdellah/esp-idf/ep_smart_house=. -fmacro-prefix-map=/home/abdellah/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ep_wifi/CMakeFiles/__idf_ep_wifi.dir/ep_wifi.c.obj -MF esp-idf/ep_wifi/CMakeFiles/__idf_ep_wifi.dir/ep_wifi.c.obj.d -o esp-idf/ep_wifi/CMakeFiles/__idf_ep_wifi.dir/ep_wifi.c.obj -c /home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c
In file included from /home/abdellah/esp-idf/components/esp_wifi/include/esp_wifi.h:54,
                 from /home/abdellah/esp-idf/components/ep_wifi/ep_wifi.h:1,
                 from /home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:8:
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c: In function 'init_wifi_event_loop':
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:47:78: warning: passing argument 3 of 'esp_event_handler_register' from incompatible pointer type [-Wincompatible-pointer-types]
   47 |     ESP_ERROR_CHECK(esp_event_handler_register(WIFI_EVENT, ESP_EVENT_ANY_ID, &wifi_event_handler, NULL));
      |                                                                              ^~~~~~~~~~~~~~~~~~~
      |                                                                              |
      |                                                                              void (*)(void *, const char **, int32_t,  void *) {aka void (*)(void *, const char **, long int,  void *)}
/home/abdellah/esp-idf/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
In file included from /home/abdellah/esp-idf/components/esp_wifi/include/esp_wifi.h:56,
                 from /home/abdellah/esp-idf/components/ep_wifi/ep_wifi.h:1,
                 from /home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:8:
/home/abdellah/esp-idf/components/esp_event/include/esp_event.h:138:58: note: expected 'esp_event_handler_t' {aka 'void (*)(void *, const char *, long int,  void *)'} but argument is of type 'void (*)(void *, const char **, int32_t,  void *)' {aka 'void (*)(void *, const char **, long int,  void *)'}
  138 |                                      esp_event_handler_t event_handler,
      |                                      ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c: In function 'init_wifi':
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:105:25: warning: initialization of 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  105 |                 .ssid = ap.ssid,
      |                         ^~
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:105:25: note: (near initialization for 'cfg_sta.sta.ssid[0]')
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:106:29: warning: initialization of 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  106 |                 .password = ap.password,
      |                             ^~
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:106:29: note: (near initialization for 'cfg_sta.sta.password[0]')
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:103:29: error: missing braces around initializer [-Werror=missing-braces]
  103 |     wifi_config_t cfg_sta = {
      |                             ^
  104 |             .sta = {
  105 |                 .ssid = ap.ssid,
      |                         {      }
  106 |                 .password = ap.password,
      |                             {
  107 |             },
      |             }
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:103:29: error: missing braces around initializer [-Werror=missing-braces]
  103 |     wifi_config_t cfg_sta = {
      |                             ^
  104 |             .sta = {
  105 |                 .ssid = ap.ssid,
      |                         {      }
  106 |                 .password = ap.password,
      |                             {
  107 |             },
      |             }
At top level:
/home/abdellah/esp-idf/components/ep_wifi/ep_wifi.c:51:13: warning: 'print_auth_mode' defined but not used [-Wunused-function]
   51 | static void print_auth_mode(int authmode)
      |             ^~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
